# g2o

./: .pre-commit-config.yaml  CMakeLists.txt  config.h.in
cmake_modules/: FindCholmod.cmake
g2o/: CMakeLists.txt  config.h
g2o/core/: CMakeLists.txt  g2o_core_api.h  jacobian_workspace.h  optimization_algorithm_levenberg.cpp  optimization_algorithm_levenberg.h  optimization_algorithm_with_hessian.cpp  optimization_algorithm_with_hessian.h  robust_kernel.h  sparse_block_matrix.h
g2o/solvers/: CMakeLists.txt
g2o/solvers/cholmod/: CMakeLists.txt
g2o/solvers/csparse/: CMakeLists.txt
g2o/solvers/dense/: CMakeLists.txt
g2o/solvers/eigen/: CMakeLists.txt
g2o/solvers/pcg/: CMakeLists.txt
g2o/solvers/slam2d_linear/: CMakeLists.txt
g2o/solvers/structure_only/: CMakeLists.txt
g2o/stuff/: CMakeLists.txt  misc.h
g2o/types/: CMakeLists.txt
